# extension-cookiecutter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json
.github/workflows/: main.yml
hooks/: post_gen_project.py
{{cookiecutter.package_name}}/: .pre-commit-config.yaml  README.md  RELEASE.md  conftest.py  pyproject.toml  pytest.ini  setup.py
{{cookiecutter.package_name}}/.github/workflows/: binder-on-pr.yml  build.yml  check-release.yml
{{cookiecutter.package_name}}/binder/: environment.yml  postBuild
{{cookiecutter.package_name}}/tests/: test_handlers.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  extension.py  handlers.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/tests/: __init__.py  test_handlers.py
