[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.package_name}}"
authors = [{name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"}]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Jupyter", "Extension"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Jupyter",
]
dependencies = ["jupyter_server>=1.6,<2"]

[project.license]
file="LICENSE"

[project.urls]
Home = "{{cookiecutter.repository}}"

[tool.hatch.version]
path = "{{ cookiecutter.package_name }}/__init__.py"

[tool.hatch.build.targets.wheel.shared_data]
"jupyter-config" = "etc/jupyter"

[tool.jupyter_releaser]
skip = ["check-links"]
